# azure-semantic-kernel-snack

./: ABOUT.md  README.md  pyproject.toml  sk_snack.ipynb
.devcontainer/: devcontainer.json
